# python-html-dsl

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: pytest.yml
src/html_dsl/: element.py  generate_elements.py  html.py
test/: test_component_decorator.py  test_fragment.py  test_html_dsl.py
