[project]
name = "html-dsl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luka Born", email = "luka.born.2003@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
